Implmented the onLogin() and onRegister() function

--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,8 @@
               "buildTarget": "shophere:build:production"
             },
             "development": {
-              "buildTarget": "shophere:build:development"
+              "buildTarget": "shophere:build:development",
+              "proxyConfig": "proxy.conf.json"     
             }
           },
           "defaultConfiguration": "development"
